tests/negative/resource_return_place_value.ora
resource TokenUnit = u256;

contract ReturnPlaceValue {
    storage var balances: map<address, Resource<TokenUnit>>;

    fn bad(owner: address) -> Resource<TokenUnit> {
        return balances[owner];
    }
}
